--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # Frontend environment template
-VITE_API_URL=https://skillapi.moajmalnk.in/api
-# VITE_API_URL=http://localhost:8000/api
+# VITE_API_URL=https://skillapi.moajmalnk.in/api
+VITE_API_URL=http://localhost:8000/api
