--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "terser": "^5.44.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19"
+    "vite": "^5.4.19",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
