--- a/package.json
+++ b/package.json
@@ -61,8 +61,10 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.5.6",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.68.0",
+    "react-intersection-observer": "^10.0.2",
     "react-markdown": "^10.1.0",
     "react-player": "^3.4.0",
     "react-quill": "^2.0.0",
